@@ -1008,6 +1008,7 @@ function resetUIConfig()
 	setConfigVar ('FILTER_SUGGEST_PREDICATES','yes');
 	setConfigVar ('FILTER_SUGGEST_EXTRA','no');
         setConfigVar ('DEFAULT_SNMP_COMMUNITY','public');
+	setConfigVar ('IPV4_ENABLE_KNIGHT','yes');
 	return buildRedirectURL (__FUNCTION__, 'OK');
 }
 
